# Nvidia-stock-price-predictor

./: Nvidia-stock-price-predictor.py  README.md  data-retrieval.py  empty_file.txt.txt  nvidia_stock_data.csv  nvidia_stock_price_predictor.py  pyproject.toml  test.py
Methods/: nvidia_stock_price_predictor.py  test-nvidia-stock-predictor.py
project2/: LB2292 - Project 2.ipynb
src/Methods/: test_nvidia_stock_predictor.py
src/Nvidia_stock_price_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
